--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
     "react": "^16.0.0-beta.5",
     "react-dom": "^16.2.0",
     "react-native": "^0.49.5",
+    "react-native-actionsheet": "^2.4.1",
+    "react-native-app-intro-slider": "^0.2.4",
     "react-native-router-flux": "^4.0.0-beta.24",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
